Replace Subject.doAs by Subject.callAs.